syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "BattleEndStatus.proto";

message StrongChallengeActivityBattleEndScNotify {
	uint32 total_damage = 5;
	uint32 AHJFPNGDBDO = 11;
	BattleEndStatus end_status = 1;
	uint32 GGBECCHPHCD = 13;
	uint32 stage_score = 14;
	uint32 stage_id = 8;
	uint32 JAMLOKNCAKC = 4;
	uint32 score = 3;
}


